changed scrollbar style due to bug

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -70,3 +70,22 @@ a {
     color: inherit;
   }
 }
+
+/*       ScrollBar 1        */
+
+*::-webkit-scrollbar {
+  width: 16px;
+}
+
+*::-webkit-scrollbar-track {
+  border-radius: 8px;
+  background-color: #e7e7e7;
+  border: 1px solid #cacaca;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  border: 3px solid transparent;
+  background-clip: content-box;
+  background-color: cornflowerblue;
+}
