--- a/src/styles/pokemon.scss
+++ b/src/styles/pokemon.scss
@@ -7,9 +7,9 @@
   padding: 15px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  gap: 12px;
+  gap: 10px;
   overflow-y: auto;
   overflow-x: hidden;
 
